Fix some layout issues.

--- a/src/web/screens/dashboard.scss
+++ b/src/web/screens/dashboard.scss
@@ -1,5 +1,5 @@
 .dashboard-content {
-  padding: 3rem;
+  padding: 38px 48px;
   flex-grow: 1;
   background-color: var(--theme-background-content);
 }
